2002-12-03    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/dispatcher.py: several api changes, mostly
	involving changes to how state behaves.
	* pylibs/formlib/state.py: now store the current formname on
	the stack, and only store formnames there, not pickled forms.
	The state field now stores one dictionary per form with its field
	information; this is a problem if the same form occurs more than
	once on the stack.
	* pylibs/formlib/form.py (Form.getData): added an optional "prune"
	argument that prevents returning data we may not be interested in 
	(fields that aren't setable or whose names begin with an
	underscore).
	* pylibs/formlib/views.py (HiddenField): now not setable; previous
	implementation was broken.
	* test/sitelibs/formlibtest/testDispatch3.py,
	test/formlib/htdocs/testDispatch3.pyinc: modified to work with
	refactoring of formlib.

2002-12-02    <smulloni@smullbola.smullyan.org>

	* pylibs/formlib/state.py (InPageStateManager.__init__): stack
	is now just an ordinary list.

	* test/formlib/htdocs/testDispatch3.pyinc: popping and pushing now work,
	albeit awkwardly.

	* test/sitelibs/formlibtest/testDispatch3.py: sitelib for dispatcher 
	test.

2002-12-02  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/views.py: wrapped some long
	comments.

	* pylibs/aesencrypt.py: changed some printouts
	to use stderr.

2002-11-29  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/unittests/validatestest.py
	(DateFieldUnitTest.testValidateSucceeds): Added a series of
	unittests for existing components in validates.py

	* test/formlib/unittests/formtest.py (suite): minor formatting
	correction

2002-11-29  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/aesencrypt.py: added command-line file
	encryption/decryption capability.

2002-11-27  Jacob Smullyan  <smulloni@smullyan.org>

	* test/formlib/htdocs/testDispatch2.pyinc (form2): made 'yomama'
	required. 

2002-11-27  James Richards  <jrichards@satie.wnyc.org>
